# backend-ii

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  manage.py  pyproject.toml
.github/workflows/: main.yml
ai_agents/: README.md  compose.yaml  pyproject.toml
ai_agents/.devcontainer/: devcontainer.json
ai_agents/src/ai_agents/: crew.py  main.py
design_patterns_api/: Makefile
design_patterns_api/src/design_patterns_api/: api.py  payments.py  services.py
django_graphql/: Dockerfile  asgi.py  compose.yaml  pyproject.toml  settings.py  urls.py
django_graphql/django_graphql/: wsgi.py
django_recap/: .pre-commit-config.yaml  Dockerfile  Makefile  compose.yml  manage.py  pyproject.toml
django_recap/django_recap/: settings.py
django_recap/todo/: admin.py  models.py  tests.py
django_recap/todo/migrations/: 0001_initial.py
movies/: models.py  schema.py  urls.py
movies_grpc/: Makefile  pyproject.toml
movies_grpc/.devcontainer/: devcontainer.json
movies_grpc/src/movies_grpc/: client.py  movie_pb2.py  movie_pb2.pyi  movie_pb2_grpc.py  server.py
movies_grpc/src/proto/: movie.proto
src/api/: run.py
src/api/routes/: shop.py  users.py
src/models/: shop.py  user.py
